syntax = "proto3";

package task;

service TaskService {
    rpc Create (CreateTaskReq) returns (TaskRes);
    rpc Get (GetAndDeleteTask) returns (TaskRes);
    rpc Update (UpdateTaskReq) returns (TaskRes);
    rpc Delete (GetAndDeleteTask) returns (ErrOrStatus);
    rpc List (LimAndPage) returns (TasksList);
    rpc ListOverdue (LimAndPage) returns (TasksList);
}


message GetAndDeleteTask {
    string id = 1;
}

message LimAndPage {
    int64 limit = 1;
    int64 page = 2;
}

message TasksList {
    repeated TaskRes tasks = 1;
}

message CreateTaskReq {
    string title = 1;
    string assignee_id = 2;
    string deadline = 3;
    string status = 4;
}

message UpdateTaskReq {
    string id = 1;
    string title = 2;
    string assignee_id = 3;
    string deadline = 4;
    string status = 5;
}

message ErrOrStatus {
    string message = 1;
}

message TaskRes {
    string id = 1;
    string title = 2;
    string assignee_id = 3;
    string deadline = 4;
    string status = 5;
    string created_at = 6;
    string updated_at = 7;
}
